results/SVCOMP/specgen/log-DriverManager-2024_02_25_14_17_32.txt
class SQLException extends Exception {}

class Statement {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures \no_change;
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ requires o != null;
  //@ ensures \no_change;
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures \no_change;
  public void executeQuery(String s) {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }
}

class Connection {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures \no_change;
  public void prepareStatement(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ ensures \no_change;
  public void close() throws SQLException {}

  //@ ensures \result != null;
  public Statement createStatement() {
    return new Statement();
  }
}

public class DriverManager {
  //@ requires connectionString != null;
  //@ ensures \result != null;
  public static Connection getConnection(String connectionString) {
    return new Connection();
  }
}
/home/max/Documents/JMLGPT/tmp/DriverManager.java:7: error: This backslash token is unknown: \no_change
  //@ ensures \no_change;
              ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:17: error: This backslash token is unknown: \no_change
  //@ ensures \no_change;
              ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:26: error: This backslash token is unknown: \no_change
  //@ ensures \no_change;
              ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:38: error: This backslash token is unknown: \no_change
  //@ ensures \no_change;
              ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:45: error: This backslash token is unknown: \no_change
  //@ ensures \no_change;
              ^
5 errors

class SQLException extends Exception {}

class Statement {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ requires o != null;
  //@ ensures true;
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void executeQuery(String s) {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }
}

class Connection {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void prepareStatement(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ ensures true;
  public void close() throws SQLException {}

  //@ ensures \result != null;
  public Statement createStatement() {
    return new Statement();
  }
}

public class DriverManager {
  //@ requires connectionString != null;
  //@ ensures \result != null;
  public static Connection getConnection(String connectionString) {
    return new Connection();
  }
}
/home/max/Documents/JMLGPT/tmp/DriverManager.java:10: verify: The prover cannot establish an assertion (Assert) in method execute
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:29: verify: The prover cannot establish an assertion (Assert) in method executeQuery
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:20: verify: The prover cannot establish an assertion (Assert) in method executeUpdate
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:41: verify: The prover cannot establish an assertion (Assert) in method prepareStatement
      assert false;
      ^
4 verification failures

class SQLException extends Exception {}

class Statement {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ requires o != null;
  //@ ensures true;
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void executeQuery(String s) {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }
}

class Connection {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void prepareStatement(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ ensures true;
  public void close() throws SQLException {}

  //@ ensures \result != null;
  public Statement createStatement() {
    return new Statement();
  }
}

public class DriverManager {
  //@ requires connectionString != null;
  //@ ensures \result != null;
  public static Connection getConnection(String connectionString) {
    return new Connection();
  }
}
/home/max/Documents/JMLGPT/tmp/DriverManager.java:29: error: unreported exception SQLException; must be caught or declared to be thrown
      throw new SQLException();
      ^
1 error

class SQLException extends Exception {}

class Statement {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ requires o != null;
  //@ ensures true;
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void executeQuery(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }
}

class Connection {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void prepareStatement(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ ensures true;
  public void close() throws SQLException {}

  //@ ensures \result != null;
  public Statement createStatement() {
    return new Statement();
  }
}

public class DriverManager {
  //@ requires connectionString != null;
  //@ ensures \result != null;
  public static Connection getConnection(String connectionString) {
    return new Connection();
  }
}

